<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/booksearch_nav_graph"
    app:startDestination="@id/fragment_search_books">

    <fragment
        android:id="@+id/fragment_favorite_books"
        android:name="com.kenshi.presentation.screen.favoritebooks.FavoriteBooksFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite_books">
        <action
            android:id="@+id/action_fragment_favorite_books_to_fragment_book_detail"
            app:destination="@id/fragment_book_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/fragment_settings"
        android:name="com.kenshi.presentation.screen.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/fragment_search_books"
        android:name="com.kenshi.presentation.screen.searchbooks.SearchBooksFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search_books">
        <action
            android:id="@+id/action_fragment_search_books_to_fragment_book_detail"
            app:destination="@id/fragment_book_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/fragment_book_detail"
        android:name="com.kenshi.presentation.screen.bookdetail.BookDetailFragment"
        android:label="@string/book_info"
        tools:layout="@layout/fragment_book_detail">
        <argument
            android:name="book"
            app:argType="com.kenshi.presentation.item.BookItem" />
    </fragment>

</navigation>